--- a/ProyectoDWS/src/main/resources/templates/show_course.html
+++ b/ProyectoDWS/src/main/resources/templates/show_course.html
@@ -1,51 +1,34 @@
-<html lang="en">
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Cursos</title>
-    <link rel="stylesheet" href="/showCourse.css">
-    <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
+    <title th:text="${course.title}">Detalles del Curso</title>
 </head>
 <body>
-<div class="container">
-    <p><u>Asignatura</u><br>{{course.subject}}</p>
-    <br>
-    <p><u>Titulo</u><br>{{course.title}}</p>
-    <br>
-    <p><u>Description</u><br>{{course.description}}</p>
-    <form action="/course/{{id}}/enroll" method="post">
-        <button type="submit">Unirse al curso</button>
-    </form>
-</div>
-<div class="button">
-    <a href="/course/{{id}}/delete">Delete course</a>
-    <br>
-    <a href="/course/{{id}}/edit">Edit course</a>
-    <br>
-    <a href="/course/{{id}}/enrolledStudents">Alumnos matriculados</a>
-    <br>
-</div>
-    <h2>Comments</h2>
-    {{#course.comments}}
-    <div>
-        <b>{{author.name}}</b>: {{message}}
-        <form action="/course/{{id}}/comments/{{id}}/delete" method="post" style="display: inline;">
-            <input type='submit' value='Delete comment'/>
+<h1 th:text="${course.title}"></h1>
+<p th:text="${course.description}"></p>
+<p><strong>Asignatura:</strong> <span th:text="${course.subject.title}"></span></p>
+
+<a th:href="@{/course/{id}/edit(id=${course.id})}">Editar</a> |
+<a th:href="@{/course/{id}/delete(id=${course.id})}">Eliminar</a> |
+<a th:href="@{/course/{id}/enroll(id=${course.id})}">Inscribirse</a>
+
+<h2>Comentarios</h2>
+<ul>
+    <li th:each="comment : ${course.comments}">
+        <p th:text="${comment.text}"></p>
+        <form th:action="@{/course/{courseId}/comments/{commentId}/delete(courseId=${course.id}, commentId=${comment.id})}" method="post">
+            <button type="submit">Eliminar comentario</button>
         </form>
-    </div>
-    <br>
+    </li>
+</ul>
 
-    {{/course.comments}}
+<h3>Añadir comentario</h3>
+<form th:action="@{/course/{id}/comments/new(id=${course.id})}" method="post">
+    <textarea name="text" rows="3" cols="40" required></textarea><br/>
+    <button type="submit">Enviar comentario</button>
+</form>
 
-    {{^course.comments}}
-    <p>No comments yet.</p>
-    {{/course.comments}}
-
-    <form action="/course/{{id}}/comments/new" method="post" style="background-color: #c2c2c2; width: 200px; padding: 10px;">
-        <p>Message: <input type='text' name='message'/></p>
-        <input type='submit' value='Add comment'/>
-    </form>
-
-<br>
-<a href="/courses">Back</a>
+<br/>
+<a href="/courses">Volver a cursos</a>
 </body>
 </html>
