--- a/ProyectoDWS/src/main/resources/templates/courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses.html
@@ -14,8 +14,12 @@
     <div class="content">
       <div class="content-cards">
         <div class="card" th:each="course : ${courses}">
+          <img class="card-image" th:if="${course.imageFile != null}" th:src="@{/course/{id}/image(id=${course.id})}" th:alt="${course.title}" alt="Course Image">
           <a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.title}">Título del curso</a>
-          <p><u>Asignatura:</u> <span th:text="${course.subject}">Nombre asignatura</span></p>
+          <p><u>Asignaturas:</u></p>
+          <ul>
+            <li th:each="subject : ${course.subjects}" th:text="${subject.title}">Nombre asignatura</li>
+          </ul>
         </div>
       </div>
     </div>
