--- a/ProyectoDWS/src/main/resources/templates/errorScreens/Error500.html
+++ b/ProyectoDWS/src/main/resources/templates/errorScreens/Error500.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Error 401</title>
+  <title>Error 500</title>
   <link rel="stylesheet" href="/styles/error.css">
   <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1>Error 401 Unauthorised</h1>
+<h1>Error 500 Internal Server Error</h1>
 </body>
-</html>
