--- a/ProyectoDWS/src/main/resources/templates/courses/new_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/new_course.html
@@ -5,20 +5,23 @@
 <div th:replace="layout/layout :: header"></div>
 <main>
     <h1>Crear nuevo curso</h1>
-    <form th:action="@{/courses/saved}" method="post" th:object="${course}">
+    <form th:action="@{/courses/saved}" th:object="${course}" method="post" enctype="multipart/form-data">
         <!-- Desplegable de subjects -->
-        <label for="subject">Asignatura:</label>
-        <select id="subject" th:field="*{subject}" required>
-            <option value="" disabled selected>Selecciona una asignatura</option>
+        <label for="subjects">Asignaturas:</label>
+        <select id="subjects" name="subjects" multiple required>
+            <option value="" disabled>Selecciona una o más asignaturas</option>
             <!-- Iteramos sobre los subjects disponibles -->
             <option th:each="subject : ${subjects}" th:value="${subject.id}" th:text="${subject.title}"></option>
         </select><br/>
 
         <label for="title">Título:</label>
-        <input type="text" id="title" th:field="*{title}" required/><br/>
+        <input type="text" id="title" name="title" required/><br/>
 
         <label for="description">Descripción:</label>
-        <textarea id="description" th:field="*{description}" rows="5" cols="40"></textarea><br/>
+        <textarea id="description" name="description" rows="5" cols="40"></textarea><br/>
+
+        <label for="image">Imagen:</label>
+        <input type="file" id="image" name="image" accept="image/*" required/><br/>
 
         <button type="submit">Crear curso</button>
     </form>
@@ -26,3 +29,4 @@
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
+
