--- a/ProyectoDWS/src/main/resources/templates/errorScreens/Error300.html
+++ b/ProyectoDWS/src/main/resources/templates/errorScreens/Error300.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AboutUS</title>
-    <link rel="stylesheet" href="/css/Error.css">
+    <title>Error 300</title>
+    <link rel="stylesheet" href="/styles/error.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
 <h1>Error 300 Moved permanently</h1>
 </body>
+
