--- a/ProyectoDWS/src/main/resources/templates/errorScreens/Error404.html
+++ b/ProyectoDWS/src/main/resources/templates/errorScreens/Error404.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AboutUS</title>
-    <link rel="stylesheet" href="/css/Error.css">
+    <title>Error 404</title>
+    <link rel="stylesheet" href="/styles/error.css">
     <link href="https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap" rel="stylesheet">
 </head>
 <body>
