Arreglar operaciones sobre asignaturas y poner nombres correctos a los archivos CSS.

--- a/ProyectoDWS/src/main/resources/static/styles/edited_subject.css
+++ b/ProyectoDWS/src/main/resources/static/styles/edited_subject.css
@@ -1,4 +1,4 @@
-/* edited_courses.css */
+/* edited_course.css */
 body {
     font-family: 'Tilt Warp', sans-serif;
     background-color: #f8f9fa;
