--- a/ProyectoDWS/src/main/resources/templates/about_us.html
+++ b/ProyectoDWS/src/main/resources/templates/about_us.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Sobre nosotros - AcademiaSaber', '/styles/aboutUS.css')"></head>
+<head th:replace="layout/layout :: head('Sobre nosotros - AcademiaSaber', '/styles/about_us.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
     <section class="about-us">
         <p>
-            We are a group of alumni who want to help newer students in the cybersecurity engineering program.
-            We all know that it is a difficult grade, but also we know that, if you study and have a good preparation
-            for your exams, you won't have any problem to pass it.
-            We are:<br>
+            Somos un grupo de alumnos que queremos ayudar a los estudiantes más nuevos en el programa de ingeniería en ciberseguridad.
+            Todos sabemos que es una asignatura difícil, pero también sabemos que, si estudias y tienes una buena preparación
+            para tus exámenes, no tendrás ningún problema para aprobarla.
+            Somos:<br>
         <div class="centered-list">
             <ul>
                 <li>Erika Illarionov</li>
