Reestructurar y mejorar el CSS, reestructurar llamadas relacionadas a comentarios, y hace que los datos de ejemplo de BD se generen sólo si está vacía.

--- a/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/deleted_course.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/deleted_course.css')"></head>
+<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/deleted_course.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
