--- a/ProyectoDWS/src/main/resources/templates/courses/edit_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/edit_course.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Editar Curso - AcademiaSaber', '/styles/edit_course.css')"></head>
+<head th:replace="layout/layout :: head('Editar Curso - AcademiaSaber', '/styles/courses/edit_course.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
@@ -28,4 +28,3 @@
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
-
