--- a/ProyectoDWS/src/main/resources/templates/courses/my_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/my_courses.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos Matriculados - AcademiaSaber', '/styles/my_courses.css')"></head>
+<head th:replace="layout/layout :: head('Cursos Matriculados - AcademiaSaber', '/styles/courses/my_courses.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
