--- a/ProyectoDWS/src/main/resources/templates/courses/new_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/new_course.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Nuevo Curso - AcademiaSaber', '/styles/new_course.css')"></head>
+<head th:replace="layout/layout :: head('Nuevo Curso - AcademiaSaber', '/styles/courses/new_course.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
@@ -29,4 +29,3 @@
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
-
