--- a/ProyectoDWS/src/main/resources/templates/courses/show_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/show_course.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Detalles del Curso - AcademiaSaber', '/styles/show_course.css')"></head>
+<head th:replace="layout/layout :: head('Detalles del Curso - AcademiaSaber', '/styles/courses/show_course.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
