--- a/ProyectoDWS/src/main/resources/templates/subjects/deleted_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/deleted_subject.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Asignaturas - AcademiaSaber', '/styles/deleted_course.css')"></head>
+<head th:replace="layout/layout :: head('Asignaturas - AcademiaSaber', '/styles/subjects/deleted_subject.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
