--- a/ProyectoDWS/src/main/resources/templates/subjects/edit_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/edit_subject.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Editar Asignatura - AcademiaSaber', '/styles/edit_subject.css')"></head>
+<head th:replace="layout/layout :: head('Editar Asignatura - AcademiaSaber', '/styles/subjects/edit_subject.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
@@ -24,4 +24,3 @@
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
-
