--- a/ProyectoDWS/src/main/resources/templates/subjects/form.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Añadir Asignatura - AcademiaSaber', '/styles/form.css')"></head>
+<head th:replace="layout/layout :: head('Añadir Asignatura - AcademiaSaber', '/styles/subjects/form.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
