--- a/ProyectoDWS/src/main/resources/templates/subjects/new_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/new_subject.html
@@ -1,5 +1,5 @@
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Nueva Asignatura - AcademiaSaber', '/styles/new_subject.css')"></head>
+<head th:replace="layout/layout :: head('Nueva Asignatura - AcademiaSaber', '/styles/subjects/new_subject.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
