--- a/ProyectoDWS/src/main/resources/templates/subjects/saved_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/saved_subject.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Asignatura Guardada - AcademiaSaber', '/styles/saved_subject.css')"></head>
+<head th:replace="layout/layout :: head('Asignatura Guardada - AcademiaSaber', '/styles/subjects/saved_subject.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
@@ -13,3 +13,4 @@
 <div th:replace="layout/layout :: footer"></div>
 </body>
 </html>
+
