--- a/ProyectoDWS/src/main/resources/static/styles/subjects.css
+++ b/ProyectoDWS/src/main/resources/static/styles/subjects.css
@@ -1,92 +1,1 @@
-body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-}
-
-header {
-    background-color: #e0e0e0;
-    padding: 20px 0;
-    text-align: center;
-}
-
-.content {
-    width: 80%;
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-.menu nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-}
-
-.menu nav ul li {
-    margin: 0 20px;
-}
-
-.menu nav ul li a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-}
-
-.menu nav ul li a:hover {
-    background-color: #d0d0d0;
-}
-
-.titular h1 {
-    font-family: 'Tilt Warp', cursive;
-    font-size: 2.5em;
-    color: #333;
-    margin-top: 30px;
-}
-
-main {
-    width: 80%;
-    margin: 2em auto;
-    background-color: #fff;
-    padding: 2em;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-section {
-    margin-bottom: 1.5em;
-}
-
-section h2 {
-    color: #333;
-    margin-bottom: 1em;
-}
-
-section ul {
-    list-style-type: disc;
-    padding-left: 20px;
-}
-
-section li {
-    margin-bottom: 0.5em;
-}
-
-section li strong {
-    color: #333;
-    font-weight: bold;
-}
-
-section a {
-    text-decoration: none;
-    color: #007bff;
-    font-weight: bold;
-}
-
-section a:hover {
-    text-decoration: underline;
-}
+/* Styles for showing the subjects */
