--- a/ProyectoDWS/src/main/resources/templates/courses/manage_form.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/manage_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/manage_form.css')"></head>
+<head th:replace="layout/layout :: head('Cursos - AcademiaSaber', '/styles/courses/manage_form.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
