--- a/ProyectoDWS/src/main/resources/templates/layout/layout.html
+++ b/ProyectoDWS/src/main/resources/templates/layout/layout.html
@@ -16,7 +16,7 @@
                     <li><a href="/">INICIO</a></li>
                     <li><a href="/courses">CURSOS</a></li>
                     <li><a href="/subjects">ASIGNATURAS</a></li>
-                    <li><a href="/aboutUS">SOBRE NOSOTROS</a></li>
+                    <li><a href="/about-us">SOBRE NOSOTROS</a></li>
                     <li><a href="/contact">CONTACTO</a></li>
                 </ul>
             </nav>
