--- a/ProyectoDWS/src/main/resources/templates/subjects/my_subjects.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/my_subjects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="layout/layout :: head('Asignaturas Matriculadas - AcademiaSaber', '/styles/my_subjects.css')"></head>
+<head th:replace="layout/layout :: head('Asignaturas Matriculadas - AcademiaSaber', '/styles/subjects/my_subjects.css')"></head>
 <body>
 <div th:replace="layout/layout :: header"></div>
 <main>
