Mejorar nombres de los manejos de errores. Hacer que los enrolamientos en cursos se guarden en BD y no en la sesión.

--- a/ProyectoDWS/src/main/resources/templates/courses/show_course.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/show_course.html
@@ -14,7 +14,7 @@
     <!-- Botones de acción -->
     <a th:href="@{/course/{id}/edit(id=${course.id})}">Editar</a> |
     <a th:href="@{/course/{id}/delete(id=${course.id})}">Eliminar</a> |
-    <form th:action="@{/course/{id}/enroll(id=${course.id})}" method="post">
+    <form th:if="${!course.enrolledStudents.contains(user)}" th:action="@{/course/{id}/enroll(id=${course.id})}" method="post">
         <button type="submit">Inscribirse</button>
     </form>
 
