--- a/ProyectoDWS/src/main/resources/templates/courses/my_courses.html
+++ b/ProyectoDWS/src/main/resources/templates/courses/my_courses.html
@@ -9,7 +9,7 @@
             <h2>Cursos en los que estás matriculado</h2>
             <div class="content-cards">
                 <div class="card" th:each="course : ${enrolledCourses}">
-                    <img class="card-image" th:if="${course.imageFile != null}" th:src="@{/course/{id}/image(id=${course.id})}" th:alt="${course.title}" alt="Course Image">
+                    <img class="card-image" th:src="@{/course/{id}/image(id=${course.id})}" th:alt="${course.title}" alt="Course Image">
                     <a th:href="@{/course/{id}(id=${course.id})}" th:text="${course.title}">Título del curso</a>
                 </div>
             </div>
