Cambiar los método de eliminar de GET a POST, algunos ajustes y quitar algunos comentarios

--- a/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
@@ -13,7 +13,9 @@
     </div>
 
     <div class="button">
-        <a th:href="@{/subject/{id}/delete(id=${subject.id})}">Eliminar asignatura</a>
+        <form th:action="@{/subject/{id}/delete(id=${subject.id})}" method="post">
+            <button type="submit">Eliminar asignatura</button>
+        </form>
         <br>
         <a th:href="@{/subject/{id}/edit(id=${subject.id})}">Editar asignatura</a>
         <br>
