distintos cambios para que funcione la api, y tema de imagenes

--- a/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
+++ b/ProyectoDWS/src/main/resources/templates/subjects/show_subject.html
@@ -19,7 +19,7 @@
         <br>
         <a th:href="@{/subject/{id}/edit(id=${subject.id})}">Editar asignatura</a>
         <br>
-        <a th:href="@{/subject/{id}/courses(id=${subject.id})}">Lista de cursos</a>
+        <a th:href="@{/subject/{id}/courses(id=${subject.id})}">Lista de cursos que incluye esta asignatura</a>
     </div>
 
     <br>
